--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Builder\GroupExpression\QuantifierSubexpression.cs" />
     <Compile Include="Builder\PatternSettings.cs" />
     <Compile Include="Builder\CharClass.cs" />
-    <Compile Include="Builder\CharGroup\CharGrouping.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharacterGroupExpression.cs" />
     <Compile Include="Builder\CharItem\TextCharItem.cs" />
     <Compile Include="Builder\CharItem\CharCodeCharItem.cs" />
     <Compile Include="Builder\CharItem\CharsCharItem.cs" />
@@ -101,8 +101,8 @@
     <Compile Include="Builder\CharItem\NotUnicodeBlockCharItem.cs" />
     <Compile Include="Builder\CharItem\UnicodeCategoryCharItem.cs" />
     <Compile Include="Builder\CharItem\UnicodeBlockCharItem.cs" />
-    <Compile Include="Builder\CharItem\CharItem.cs" />
-    <Compile Include="Builder\CharItem\CharItems.cs" />
+    <Compile Include="Builder\CharItem\CharacterGroupItem.cs" />
+    <Compile Include="Builder\CharacterItem.cs" />
     <Compile Include="Builder\CharItem\CharItem_.cs" />
     <Compile Include="Builder\Expression\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
@@ -127,7 +127,6 @@
     <Compile Include="Builder\AlternationExpression\AlternationExpression.cs" />
     <Compile Include="Builder\InlineOptions.cs" />
     <Compile Include="Builder\Expression\NameBackreference.cs" />
-    <Compile Include="Builder\GroupExpression\NumberNamedGroup.cs" />
     <Compile Include="Builder\GroupExpression\NamedGroup.cs" />
     <Compile Include="Builder\GroupExpression\NonbacktrackingExpression.cs" />
     <Compile Include="Builder\GroupExpression\NoncapturingExpression.cs" />
@@ -141,38 +140,38 @@
     <Compile Include="Builder\QuantifierKind.cs" />
     <Compile Include="Builder\QuantifierExpression\MaybeQuantifier.cs" />
     <Compile Include="Builder\GroupExpression\Subexpression.cs" />
-    <Compile Include="Builder\Substitutions.cs" />
+    <Compile Include="Builder\Substitution.cs" />
     <Compile Include="Builder\Syntax.cs" />
     <Compile Include="Builder\UnicodeBlock.cs" />
     <Compile Include="Builder\UnicodeCategory.cs" />
     <Compile Include="Builder\Utilities.cs" />
-    <Compile Include="Builder\CharGroup\NotAsciiCharGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotAsciiCharGroup.cs" />
     <Compile Include="Builder\Expression\CharCodeExpression.cs" />
     <Compile Include="Builder\Expression\AsciiCharExpression.cs" />
     <Compile Include="Builder\Expression\CharClassExpression.cs" />
     <Compile Include="Builder\Expression\AnyCharExpression.cs" />
-    <Compile Include="Builder\CharGroup\NotCodeRangeGroup.cs" />
-    <Compile Include="Builder\CharGroup\NotCharCodeGroup.cs" />
-    <Compile Include="Builder\CharGroup\NotCharItemGroup.cs" />
-    <Compile Include="Builder\CharGroup\NotCharRangeGroup.cs" />
-    <Compile Include="Builder\CharGroup\NotCharsGroup.cs" />
-    <Compile Include="Builder\CharGroup\NotUnicodeBlockGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotCharCodeRangeGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotCharCodeGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotCharItemGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotCharRangeGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotCharGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotUnicodeBlockGroup.cs" />
     <Compile Include="Builder\Expression\NotUnicodeBlockExpression.cs" />
     <Compile Include="Builder\Expression\NotUnicodeCategoryExpression.cs" />
-    <Compile Include="Builder\CharGroup\NotTextCharGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotTextCharGroup.cs" />
     <Compile Include="Builder\Expression\UnicodeCategoryExpression.cs" />
     <Compile Include="Builder\Expression\UnicodeBlockExpression.cs" />
-    <Compile Include="Builder\CharGroup\CodeRangeGroup.cs" />
-    <Compile Include="Builder\CharGroup\CharRangeGroup.cs" />
-    <Compile Include="Builder\CharGroup\TextCharGroup.cs" />
-    <Compile Include="Builder\CharGroup\CharItemGroup.cs" />
-    <Compile Include="Builder\CharGroup\CharCodeGroup.cs" />
-    <Compile Include="Builder\CharGroup\CharGroup.cs" />
-    <Compile Include="Builder\CharGroup\CharClassGroup.cs" />
-    <Compile Include="Builder\CharGroup\NotUnicodeCategoryGroup.cs" />
-    <Compile Include="Builder\CharGroup\UnicodeCategoryGroup.cs" />
-    <Compile Include="Builder\CharGroup\UnicodeBlockGroup.cs" />
-    <Compile Include="Builder\CharGroup\AsciiCharGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharCodeRangeGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharRangeGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\TextCharGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharItemGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharCodeGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\CharClassGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\NotUnicodeCategoryGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\UnicodeCategoryGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\UnicodeBlockGroup.cs" />
+    <Compile Include="Builder\CharacterGroupExpression\AsciiCharGroup.cs" />
     <Compile Include="Builder\Expression\CharExpression.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
