--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -90,20 +90,20 @@
     <Compile Include="Builder\PatternSettings.cs" />
     <Compile Include="Builder\CharClass.cs" />
     <Compile Include="Builder\CharacterGroupExpression\CharacterGroupExpression.cs" />
-    <Compile Include="Builder\CharItem\TextCharItem.cs" />
-    <Compile Include="Builder\CharItem\CharCodeCharItem.cs" />
-    <Compile Include="Builder\CharItem\CharsCharItem.cs" />
-    <Compile Include="Builder\CharItem\CodeRangeCharItem.cs" />
-    <Compile Include="Builder\CharItem\RangeCharItem.cs" />
-    <Compile Include="Builder\CharItem\AsciiCharItem.cs" />
-    <Compile Include="Builder\CharItem\CharClassCharItem.cs" />
-    <Compile Include="Builder\CharItem\NotUnicodeCategoryCharItem.cs" />
-    <Compile Include="Builder\CharItem\NotUnicodeBlockCharItem.cs" />
-    <Compile Include="Builder\CharItem\UnicodeCategoryCharItem.cs" />
-    <Compile Include="Builder\CharItem\UnicodeBlockCharItem.cs" />
-    <Compile Include="Builder\CharItem\CharacterGroupItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\TextCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\CharCodeCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\CharsCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\CodeRangeCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\RangeCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\AsciiCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\CharClassCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\NotUnicodeCategoryCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\NotUnicodeBlockCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\UnicodeCategoryCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\UnicodeBlockCharItem.cs" />
+    <Compile Include="Builder\CharacterGroupItem\CharacterGroupItem.cs" />
     <Compile Include="Builder\CharacterItem.cs" />
-    <Compile Include="Builder\CharItem\CharItem_.cs" />
+    <Compile Include="Builder\CharacterGroupItem\CharacterGroupItem_.cs" />
     <Compile Include="Builder\Expression\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
     <Compile Include="Builder\QuantifierExpression\ExactQuantifier.cs" />
