--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -89,21 +89,21 @@
     <Compile Include="Builder\GroupExpression\QuantifierSubexpression.cs" />
     <Compile Include="Builder\PatternSettings.cs" />
     <Compile Include="Builder\CharClass.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharacterGroupExpression.cs" />
-    <Compile Include="Builder\CharacterGroupItem\TextCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\CharCodeCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\CharsCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\CodeRangeCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\RangeCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\AsciiCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\CharClassCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\NotUnicodeCategoryCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\NotUnicodeBlockCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\UnicodeCategoryCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\UnicodeBlockCharItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\CharacterGroupItem.cs" />
-    <Compile Include="Builder\CharacterItem.cs" />
-    <Compile Include="Builder\CharacterGroupItem\CharacterGroupItem_.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharGroupExpression.cs" />
+    <Compile Include="Builder\CharGroupItem\TextCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\CharCodeCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\CharsCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\CodeRangeCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\RangeCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\AsciiCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\CharClassCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\NotUnicodeCategoryCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\NotUnicodeBlockCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\UnicodeCategoryCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\UnicodeBlockCharItem.cs" />
+    <Compile Include="Builder\CharGroupItem\CharGroupItem.cs" />
+    <Compile Include="Builder\CharItems.cs" />
+    <Compile Include="Builder\CharGroupItem\CharGroupItem_.cs" />
     <Compile Include="Builder\Expression\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
     <Compile Include="Builder\QuantifierExpression\ExactQuantifier.cs" />
@@ -143,33 +143,33 @@
     <Compile Include="Builder\UnicodeBlock.cs" />
     <Compile Include="Builder\UnicodeCategory.cs" />
     <Compile Include="Builder\Utilities.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotAsciiCharGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotAsciiCharGroup.cs" />
     <Compile Include="Builder\Expression\CharCodeExpression.cs" />
     <Compile Include="Builder\Expression\AsciiCharExpression.cs" />
     <Compile Include="Builder\Expression\CharClassExpression.cs" />
     <Compile Include="Builder\Expression\AnyCharExpression.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotCharCodeRangeGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotCharCodeGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotCharItemGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotCharRangeGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotCharGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotUnicodeBlockGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotCharCodeRangeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotCharCodeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotCharItemGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotCharRangeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotCharGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotUnicodeBlockGroup.cs" />
     <Compile Include="Builder\Expression\NotUnicodeBlockExpression.cs" />
     <Compile Include="Builder\Expression\NotUnicodeCategoryExpression.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotTextCharGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotTextCharGroup.cs" />
     <Compile Include="Builder\Expression\UnicodeCategoryExpression.cs" />
     <Compile Include="Builder\Expression\UnicodeBlockExpression.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharCodeRangeGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharRangeGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\TextCharGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharItemGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharCodeGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\CharClassGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\NotUnicodeCategoryGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\UnicodeCategoryGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\UnicodeBlockGroup.cs" />
-    <Compile Include="Builder\CharacterGroupExpression\AsciiCharGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharCodeRangeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharRangeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\TextCharGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharItemGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharCodeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\CharClassGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotUnicodeCategoryGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\UnicodeCategoryGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\UnicodeBlockGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\AsciiCharGroup.cs" />
     <Compile Include="Builder\Expression\CharExpression.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
