--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -102,19 +102,19 @@
     <Compile Include="Builder\CharGroupItem\UnicodeCategoryCharItem.cs" />
     <Compile Include="Builder\CharGroupItem\UnicodeBlockCharItem.cs" />
     <Compile Include="Builder\CharGroupItem\CharGroupItem.cs" />
-    <Compile Include="Builder\CharItems.cs" />
+    <Compile Include="Builder\CharGroupItems.cs" />
     <Compile Include="Builder\CharGroupItem\CharGroupItem_.cs" />
     <Compile Include="Builder\Expression\CharSubtraction.cs" />
     <Compile Include="Builder\EscapeMode.cs" />
     <Compile Include="Builder\QuantifierExpression\ExactQuantifier.cs" />
     <Compile Include="Builder\ExpressionKind.cs" />
     <Compile Include="Builder\Expressions.cs" />
-    <Compile Include="Builder\Alternation.cs" />
-    <Compile Include="Builder\Anchor.cs" />
-    <Compile Include="Builder\Character.cs" />
-    <Compile Include="Builder\Assertion.cs" />
-    <Compile Include="Builder\Grouping.cs" />
-    <Compile Include="Builder\Quantifier.cs" />
+    <Compile Include="Builder\Alternations.cs" />
+    <Compile Include="Builder\Anchors.cs" />
+    <Compile Include="Builder\Characters.cs" />
+    <Compile Include="Builder\Assertions.cs" />
+    <Compile Include="Builder\Groupings.cs" />
+    <Compile Include="Builder\Quantifiers.cs" />
     <Compile Include="Builder\Expression.cs" />
     <Compile Include="Builder\Expression_.cs" />
     <Compile Include="Builder\QuantifierExpression\FromToQuantifier.cs" />
@@ -124,11 +124,11 @@
     <Compile Include="Builder\IExcludedGroup.cs" />
     <Compile Include="Builder\AlternationExpression\AlternationExpression.cs" />
     <Compile Include="Builder\InlineOptions.cs" />
-    <Compile Include="Builder\Expression\NameBackreference.cs" />
+    <Compile Include="Builder\Expression\NameBackreferenceExpression.cs" />
     <Compile Include="Builder\GroupExpression\NamedGroup.cs" />
     <Compile Include="Builder\GroupExpression\NonbacktrackingExpression.cs" />
     <Compile Include="Builder\GroupExpression\NoncapturingExpression.cs" />
-    <Compile Include="Builder\Expression\NumberBackreference.cs" />
+    <Compile Include="Builder\Expression\NumberBackreferenceExpression.cs" />
     <Compile Include="Builder\GroupExpression\GroupOptions.cs" />
     <Compile Include="Builder\AlternationExpression\AnyExpression.cs" />
     <Compile Include="Builder\Expression\QuantifiableExpression.cs" />
@@ -138,7 +138,7 @@
     <Compile Include="Builder\QuantifierKind.cs" />
     <Compile Include="Builder\QuantifierExpression\MaybeQuantifier.cs" />
     <Compile Include="Builder\GroupExpression\Subexpression.cs" />
-    <Compile Include="Builder\Substitution.cs" />
+    <Compile Include="Builder\Substitutions.cs" />
     <Compile Include="Builder\Syntax.cs" />
     <Compile Include="Builder\UnicodeBlock.cs" />
     <Compile Include="Builder\UnicodeCategory.cs" />
