--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Builder\AssertionExpression\CharClassAssertion.cs" />
     <Compile Include="Builder\AssertionExpression\UnicodeBlockAssertion.cs" />
     <Compile Include="Builder\AssertionExpression\UnicodeCategoryAssertion.cs" />
+    <Compile Include="Builder\CharGroupExpression\ArabicDigitRangeGroup.cs" />
+    <Compile Include="Builder\CharGroupExpression\NotArabicDigitRangeGroup.cs" />
     <Compile Include="Builder\Expression\NotCharSubtraction.cs" />
     <Compile Include="Builder\Expression\SurroundExpression.cs" />
     <Compile Include="Builder\Miscellaneous.cs" />
